# Evan_Li_IDS706_Hwk9

./: Makefile  README.md  python_performance.md  rust_performance.md
.github/workflows/: pythonCI.yml
python_proj/: Makefile  main.py  requirements.txt  test_lib.py  test_script.py
python_proj/mylib/: calculate_stat.py
rust_proj/: Cargo.toml
rust_proj/src/: lib.rs  main.rs
rust_proj/tests/: my_tests.rs
